--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.3",
+    "anychart": "^8.12.1",
     "express": "^4.18.2",
+    "prettier-tailwind": "^0.0.0-development",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
